enhanced search bar

--- a/src/flickrImages/style.css
+++ b/src/flickrImages/style.css
@@ -6,3 +6,35 @@
 .flickr .col-lg-4 {
     margin-bottom: 10px;
 }
+
+.image {
+    animation: fadeIn 3s;
+}
+
+@keyframes fadeIn {
+    0% {opacity: 0;}
+    100% {opacity: 1;}
+}
+
+.lds-dual-ring {
+    display: inline-block;
+  }
+.lds-dual-ring:after {
+    content: " ";
+    display: block;
+    width: 32px;
+    height: 32px;
+    margin: 8px;
+    border-radius: 50%;
+    border: 3px solid #444444;
+    border-color: #444444 transparent #444444 transparent;
+    animation: lds-dual-ring 1.2s linear infinite;
+}
+@keyframes lds-dual-ring {
+0% {
+    transform: rotate(0deg);
+}
+100% {
+    transform: rotate(360deg);
+}
+}
