--- a/src/navigation/style.css
+++ b/src/navigation/style.css
@@ -4,8 +4,11 @@
     padding-left: 5%;
     padding-right: 5%;
     height: 66px;
-    background-color: rgba(0,0,0,.25);
+    background-color: black;
     margin-bottom: 66px;
+    position: sticky;
+    top: 0;
+    color: white;
 }
 
 .nav-item {
